fix issue with post read more link

--- a/123catholic/index.html
+++ b/123catholic/index.html
@@ -113,7 +113,7 @@
         <article class="card rounded-0 border-0">
           <img src="https://lumenscript.com/images/123catholic/mansionspart1.jpg" alt="7 Mansions of the Interior Castle" class="card-img-top rounded-top-0">
           <div class="card-body px-0">
-            <a href="https://lumenscript.com/c/123Catholic/" class="h4 d-block">7 Mansions of the Interior Castle</a>
+            <a href="https://lumenscript.com/123catholic/interiorcastle-1/" class="h4 d-block">7 Mansions of the Interior Castle</a>
             <ul class="list-inline">
               <li class="list-inline-item"><i class="ti-pencil-alt text-primary mr-2"></i> By Vy Nguyen</li>
               <li class="list-inline-item"><i class="ti-calendar text-primary mr-2"></i>
@@ -121,7 +121,7 @@
               <li class="list-inline-item"><a href="https://www.youtube.com/c/123Catholic" target="_new"><i class="ti-youtube text-primary mr-2"></i></a>1-2-3 Catholic</li>
             </ul>
             <p>October 15th is Saint Teresa of Avila’s feast day. In her book, The Interior Castle, she compares the soul with an analogy of a great castle with seven mansions.</p>
-            <a href="https://lumenscript.com/c/123Catholic/" class="btn btn-sm btn-outline-primary">Read More</a>
+            <a href="https://lumenscript.com/123catholic/interiorcastle-1/" class="btn btn-sm btn-outline-primary">Read More</a>
           </div>
         </article>
       </div>
@@ -138,7 +138,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-7">
-        <h2 class="text-white">Subscribe to Lumen Script for Free!</h2>
+        <h2 class="text-white">Subscribe to LumenScript for Free!</h2>
         <p class="text-white">Free Book Sample Pages, Free Catechism Resources</p>
         
         <a href="https://lumenscript.com/contact" class="btn btn-light">Get it Now!</a>
