--- a/123catholic/interiorcastle-1/index.html
+++ b/123catholic/interiorcastle-1/index.html
@@ -107,9 +107,9 @@
 <ol>
 <li>The First Mansion: These souls are very worldly, but they pray a few times a month. They need to understand that they are in danger and that God is calling them to a greater holiness.</li>
 <li>The Second Mansion: These souls have gained that understanding. They need perseverance in the warfare of temptation; they need to make a committed decision to choose God and give up things of the world and occasions of sin.</li>
-<li>The Third Mansion: These souls have gained that perseverance and are now leading holy, well-ordered lives, rarely committing venial sins and doing many works of charity, penance, and meditation. They need to have humility to realize they are far from perfect and that they are not entitled to any grace or sweetness in prayer from God.
-The souls in the Fourth and Fifth Mansions are in the Illuminative Stage, where God works in us, purifying and enlightening us. He sends supernatural grace unlike anything we could obtain by our own works.</li>
+<li>The Third Mansion: These souls have gained that perseverance and are now leading holy, well-ordered lives, rarely committing venial sins and doing many works of charity, penance, and meditation. They need to have humility to realize they are far from perfect and that they are not entitled to any grace or sweetness in prayer from God.</li>
 </ol>
+<p>The souls in the Fourth and Fifth Mansions are in the Illuminative Stage, where God works in us, purifying and enlightening us. He sends supernatural grace unlike anything we could obtain by our own works.</p>
 <p>Not everyone will receive supernatural gifts, and we shouldn’t look for them. We trust our loving God knows what is best for us, whether it be crosses or consolations.</p>
 <ol start="4">
 <li>The Fourth Mansion: These souls have gained that humility that prepares them for the gift of the Prayer of Quiet, which is a supernatural joy and mysterious delight that flows directly from God. Although this divine experience greatly enlarges their hearts, they cannot stop prayer after this; they need to continue and avoid every single thing that offends God.</li>
@@ -121,6 +121,7 @@ The souls in the Fourth and Fifth Mansions are in the Illuminative Stage, where 
 <li>The Sixth Mansion: These souls have gained that deep love of God and are betrothed to Him. He may visit them many times in visions and and mystical experiences, such as trances, raptures, and flights of the spirit. These souls suffer an immense and increasing longing for God. But they need to be patient, because before they enter the center of the castle where God dwells, He tests their love for Him with severe trials of spirit.</li>
 <li>The Seventh Mansion: These souls have gained that patience and have proved their love and faithfulness to the Bridegroom in good times and in bad. These souls now enter the innermost chamber where they become one with God in a spiritual marriage. Their only desire is to glorify Him and bring others to Him. This mansion is termed a “second heaven” because the souls are so united to the Holy Trinity that they feel an almost constant, divine presence and a great peace.</li>
 </ol>
+<p>© 2021 Vy Nguyen</p>
 <p>For the PDF file of the above image, contact us at <a href="mailto:info@lumenscript.com">info@lumenscript.com</a>.</p>
 
           </div>
@@ -137,7 +138,7 @@ The souls in the Fourth and Fifth Mansions are in the Illuminative Stage, where 
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-7">
-        <h2 class="text-white">Subscribe to Lumen Script for Free!</h2>
+        <h2 class="text-white">Subscribe to LumenScript for Free!</h2>
         <p class="text-white">Free Book Sample Pages, Free Catechism Resources</p>
         
         <a href="https://lumenscript.com/contact" class="btn btn-light">Get it Now!</a>
