--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-7">
-        <h2 class="text-white">Subscribe to Lumen Script for Free!</h2>
+        <h2 class="text-white">Subscribe to LumenScript for Free!</h2>
         <p class="text-white">Free Book Sample Pages, Free Catechism Resources</p>
         
         <a href="https://lumenscript.com/contact" class="btn btn-light">Get it Now!</a>
@@ -200,7 +200,7 @@
           <a href="https://www.youtube.com/c/123Catholic" target="_new"><img src="https://lumenscript.com/images/material/material-2.png" alt="material" class="card-img-top border-0"></a>
           <div class="card-body">
             <a href="https://www.youtube.com/c/123Catholic" target="_new"><h4>1-2-3 CATHOLIC</h4></a>
-            <p>Where learning about our faith is as fun and easy as 1-2-3! Our videos explain Catechism in easy to remember points with passages from scripture.</p>
+            <p>Where learning about our faith is as fun and easy as 1-2-3! Our YouTube videos explain Catechism in easy to remember points with passages from scripture.</p>
           </div>
         </div>
       </div>
@@ -320,7 +320,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-7">
-        <h2 class="text-white">Subscribe to Lumen Script for Free!</h2>
+        <h2 class="text-white">Subscribe to LumenScript for Free!</h2>
         <p class="text-white">Free Book Sample Pages, Free Catechism Resources</p>
         
         <a href="https://lumenscript.com/contact" class="btn btn-light">Get it Now!</a>
