make youtube link go to youtube video for the post

--- a/doremicatholic/index.html
+++ b/doremicatholic/index.html
@@ -118,7 +118,7 @@
               <li class="list-inline-item"><i class="ti-pencil-alt text-primary mr-2"></i> By Vy Nguyen</li>
               <li class="list-inline-item"><i class="ti-calendar text-primary mr-2"></i>
                 27 Sep, 2021</li>
-              <li class="list-inline-item"><a href="https://www.youtube.com/channel/UChzVMmI2-WsaXPOX0ooh6CA" target="_new"><i class="ti-youtube text-primary mr-2"></i></a>Do-Re-Mi Catholic</li>
+              <li class="list-inline-item"><a href="https://www.youtube.com/watch?v=kCsWkP5A2Cs" target="_new"><i class="ti-youtube text-primary mr-2"></i></a>Do-Re-Mi Catholic</li>
             </ul>
             <p>&ldquo;O Holy Family&rdquo; is a song I wrote for the piano or keyboard. It also includes the melody and lyrics for singing.</p>
             <a href="https://lumenscript.com/doremicatholic/holyfamily-1/" class="btn btn-sm btn-outline-primary">Read More</a>
