--- a/doremicatholic/holyfamily-1/index.html
+++ b/doremicatholic/holyfamily-1/index.html
@@ -98,7 +98,7 @@
             <li class="list-inline-item"><i class="ti-pencil-alt text-primary mr-2"></i> By Vy Nguyen</li>
             <li class="list-inline-item"><i class="ti-calendar text-primary mr-2"></i>
               27 Sep, 2021</li>
-              <li class="list-inline-item"><a href="https://www.youtube.com/channel/UChzVMmI2-WsaXPOX0ooh6CA" target="_new"><i class="ti-youtube text-primary mr-2"></i></a>Do-Re-Mi Catholic</li>
+              <li class="list-inline-item"><a href="https://www.youtube.com/watch?v=kCsWkP5A2Cs" target="_new"><i class="ti-youtube text-primary mr-2"></i></a>Do-Re-Mi Catholic</li>
           </ul>
           <img src="https://lumenscript.com/images/doremicatholic/holyfamily.jpg" alt="O Holy Family Song" class="img-fluid w-100 mb-4">
           <div class="content">
