add coming soon date and win a free copy

--- a/doremicatholic/holyfamily-1/index.html
+++ b/doremicatholic/holyfamily-1/index.html
@@ -102,7 +102,8 @@
           </ul>
           <img src="https://lumenscript.com/images/doremicatholic/holyfamily.jpg" alt="O Holy Family Song" class="img-fluid w-100 mb-4">
           <div class="content">
-            <p>&ldquo;O Holy Family&rdquo; is a song I wrote for the piano or keyboard. It also includes the melody and lyrics for singing. It can be sung at any Mass, but is great for feasts of the Blessed Virgin Mary, St. Joseph, and the Holy Family. It can also be used for Masses on weddings, anniversaries, Mother&rsquo;s Day, and Father&rsquo;s Day.</p>
+            <p>Contact us at <a href="mailto:info@lumenscript.com">info@lumenscript.com</a> to purchase the music sheets for this song.</p>
+<p>&ldquo;O Holy Family&rdquo; is a song I wrote for the piano or keyboard. It also includes the melody and lyrics for singing. It can be sung at any Mass, but is great for feasts of the Blessed Virgin Mary, St. Joseph, and the Holy Family. It can also be used for Masses on weddings, anniversaries, Mother&rsquo;s Day, and Father&rsquo;s Day.</p>
 <p>I was inspired to write this song when this phrase came to my mind: &ldquo;You taught Him how to walk, the One who walked on water.&rdquo; The verses are contrasts between Jesus' divinity and His human nature. The refrain is a prayer asking the Holy Family to pray for all families, keep us together, and help parents raise their children to be saints.</p>
 <p>When I was growing up, my parents taught me and my eight siblings the responsibilities that come with the vocation of marriage, and the blessings we have when we put the love of Jesus in our center. Our world desperately needs this love because the family is being attacked in so many ways.  But the Holy Family, the model family, can intercede for us.</p>
 
