--- a/doremicatholic/index.html
+++ b/doremicatholic/index.html
@@ -120,7 +120,8 @@
                 27 Sep, 2021</li>
               <li class="list-inline-item"><a href="https://www.youtube.com/watch?v=kCsWkP5A2Cs" target="_new"><i class="ti-youtube text-primary mr-2"></i></a>Do-Re-Mi Catholic</li>
             </ul>
-            <p>&ldquo;O Holy Family&rdquo; is a song I wrote for the piano or keyboard. It also includes the melody and lyrics for singing.</p>
+            <p>Contact us at info@lumenscript.com to purchase the music sheets for this song.
+&ldquo;O Holy Family&rdquo; is a song I wrote for the piano or keyboard.</p>
             <a href="https://lumenscript.com/doremicatholic/holyfamily-1/" class="btn btn-sm btn-outline-primary">Read More</a>
           </div>
         </article>
