fix confusion with raffle

--- a/about/index.html
+++ b/about/index.html
@@ -170,7 +170,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-7">
-        <h2 class="text-white">Subscribe to LumenScript for Free!</h2>
+        <h2 class="text-white">Subscribe to LumenScript!</h2>
         <p class="text-white">Free Book Sample Pages, Free Catechism Resources</p>
         
         <a href="https://lumenscript.com/contact" class="btn btn-light">Get it Now!</a>
