get it now to sign up now

--- a/terms-conditions/index.html
+++ b/terms-conditions/index.html
@@ -151,7 +151,7 @@
         <h2 class="text-white">Subscribe to LumenScript!</h2>
         <p class="text-white">Free Book Sample Pages, Free Catechism Resources</p>
         
-        <a href="https://lumenscript.com/contact" class="btn btn-light">Get it Now!</a>
+        <a href="https://lumenscript.com/contact" class="btn btn-light">Sign Up Now!</a>
         
       </div>
       <div class="col-lg-4 col-md-5 position-relative">
