--- a/movies/donate-1/index.html
+++ b/movies/donate-1/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-us"><head>
   <meta charset="UTF-8">
-  <title>Are you interested in seeing Castle of the Aerelim as a 3D Animated Movie?</title>
+  <title>Are you interested in seeing Castle of the Aerelim as a 3D Animated Series?</title>
 
   <!-- Mobile Responsive Meta -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -99,15 +99,15 @@
     <div class="row">
       <div class="col-lg-8 mx-auto">
         <article>
-          <h2>Are you interested in seeing Castle of the Aerelim as a 3D Animated Movie?</h2>
+          <h2>Are you interested in seeing Castle of the Aerelim as a 3D Animated Series?</h2>
           <ul class="list-inline mb-4">
             <li class="list-inline-item"><i class="ti-pencil-alt text-primary mr-2"></i> By Vy Nguyen</li>
             <li class="list-inline-item"><i class="ti-calendar text-primary mr-2"></i>
               29 Oct, 2021</li>
           </ul>
-          <img src="https://lumenscript.com/images/castleofaerelim.png" alt="Are you interested in seeing Castle of the Aerelim as a 3D Animated Movie?" class="img-fluid w-100 mb-4">
+          <img src="https://lumenscript.com/images/castleofaerelim.png" alt="Are you interested in seeing Castle of the Aerelim as a 3D Animated Series?" class="img-fluid w-100 mb-4">
           <div class="content">
-            <p>Stay tuned for production progress blogs. With enough resources and donations, this story can be turned into a 3D animated feature film. Please donate. Thank you for your support!</p>
+            <p>Stay tuned for production progress blogs. With enough resources and donations, this story can be turned into a 3D animated TV series. Please donate. Thank you for your support!</p>
 
           </div>
         </article>
@@ -124,8 +124,8 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-7">
-        <h2 class="text-white">Donate to our Feature Film Project!</h2>
-        <p class="text-white">With enough resources and donations, Castle of the Aerelim can be turned into a 3D animated movie. Thank you in advance!</p>
+        <h2 class="text-white">Donate to our Animated Series Project!</h2>
+        <p class="text-white">With enough resources and donations, Castle of the Aerelim can be adapted and turned into a 3D animated TV series. Thank you in advance!</p>
         
         <a href="https://www.paypal.com/donate?business=8DP6SVS6YHDN2&amp;no_recurring=0&amp;currency_code=USD" class="btn btn-light" target="_new">Donate Now!</a>
         
