add moonrise warrior buy button

--- a/preview/moonrise-1/index.html
+++ b/preview/moonrise-1/index.html
@@ -407,7 +407,7 @@
 <h3 id="chapter-4">Chapter 4</h3>
 <p>The water was a cold bed around Vinh as she willed the river to go faster. The Taumon proved an even bigger threat than they had first thought. Their only hope was the lân. Which meant their only hope was Khanh.</p>
 <p>Vinh pulled herself up for air. No. Her poor brain wasn’t thinking straight after marinating in a river of memories. At least she had recognized Jadaran, with his aura of hidden ire. But didn’t Cao warn her Khanh wasn’t who he used to be?</p>
-<p>Vinh just had to find her father and the royal army; they would figure out another way to deal with the Taumon. Amidst charred debris, Vinh’s boat continued to drift through the city—</p>
+<p>Vinh just had to find her father and the royal army; they would figure out another way to deal with the Taumon. Amidst charred debris, Vinh’s boat continued to drift through the city.</p>
 <p>A voice came from the unseen shore. “You promised us man-flesh…”</p>
 <p>The otherworldly drawl penetrated through Vinh’s cold bones.</p>
 <p>“Where are the s-s-slain victims-s-s from your first battle?”</p>
@@ -422,7 +422,7 @@
 <p>Vinh’s feet sank into the muddy riverbed, and she realized sheepishly she was in the shallows. Water dripped down her face.</p>
 <p>On the other shore, a leopard looked back with a surprised, yet pleased expression. Vinh blinked droplets away, and there, in place of the beast, stood a handsome youth. He was tall and clean-shaven, with clear green eyes.</p>
 <p>“Are you alright?” he asked worriedly. His gaze drifted over her. “Where did you come from? Beauty such as yours shames that of a water maiden.”</p>
-<p>His gently swaying tone was entracing. But the Taumon—Vinh jerked her head away.</p>
+<p>His gently swaying tone was entrancing. But the Taumon—Vinh jerked her head away.</p>
 <p>“Don’t worry, I won’t call them. Come here, you’ll be safe with me. Come…come to me…”</p>
 <p>The sedative melody of his voice drowned out the alarm in the back of Vinh’s head. His flawless face with its glassy eyes moved closer and closer to her. No, she was the one moving.</p>
 <p>He helped her out of the river and brushed hair strands from her face. His hand lingered on her smooth neck.</p>
@@ -528,7 +528,7 @@
 <p>“Feels good to come back as a conqueror, doesn’t it, Jadaran?” A heavy hand clapped Jadaran’s back as a sonorous laugh rang in his ear.</p>
 <p>“We didn’t conquer anything,” said Jadaran.</p>
 <p>His brother, Tarshan, chief of the Taumon, roughly pushed him toward the window. “What are you talking about? You never told me they’ve become such cowards! Look at that, they burned their own city and ran away with their tails between their legs!”</p>
-<p>Jadaran didn’t bother saying people didn’t have tails. Stating the obvious was Dylan’s job.</p>
+<p>Jadaran didn’t bother saying people didn’t have tails. Stating the obvious was Dilan’s job.</p>
 <p>As if on cue, their little brother squeezed between them to look out the window too. “Do the Manteivese have tails, Jadaran?”</p>
 <p>“No,” he said. “You can’t trust everything that comes out of Tarshan’s mouth.”</p>
 <p>“Oh, come on, Jadaran. Go sit on the old king’s throne. It’ll make you feel better.” Tarshan laughed at the irony.</p>
@@ -543,11 +543,11 @@
 <p>“—with all of our horses?” interrupted Jadaran.</p>
 <p>“Well, of course!” sputtered Tarshan. “I’m not leaving my horses behind in anyone else’s care.”</p>
 <p>Jadaran shook his head. Tarshan and his horses. “What I’m saying is, we lose our advantage in the jungle. Our cavalry does the most damage if we fight on the plains.”</p>
-<p>“And I’ll get to use my arrows?” Dylan held up his recurve bow.</p>
-<p>Jadaran frowned. Dylan was a little too young to be dragged into a war.</p>
-<p>Tarshan chuckled and plucked the bow from Dylan’s grasp. “Right you are, little man. Though you’d better work on your aim.” He tossed the bow back to the boy, who fumbled to catch it.</p>
+<p>“And I’ll get to use my arrows?” Dilan held up his recurve bow.</p>
+<p>Jadaran frowned. Dilan was a little too young to be dragged into a war.</p>
+<p>Tarshan chuckled and plucked the bow from Dilan’s grasp. “Right you are, little man. Though you’d better work on your aim.” He tossed the bow back to the boy, who fumbled to catch it.</p>
 <p>“You’re going to see what war is like, and I’m going to make sure it toughens you up. Even the youngest Taumon needs to strike fear into the hearts of their enemies, am I right?”</p>
-<p>Dylan nodded enthusiastically.</p>
+<p>Dilan nodded enthusiastically.</p>
 <p>“Good. Then stop looking like a cute, happy teddy bear.”</p>
 <p>Jadaran cleared his throat. “We were deciding where to strike next?” he reminded the chief. “Let the royal guard cower in the jungle. News of our early arrival and the king’s disappearance will throw the cities’ militia into panic. We shouldn’t throw that advantage away by going on some wild goose chase. Conquer the cities now, before they can make preparations, and deal with King Quân later.”</p>
 <p>Tarshan looked thoughtful, or at least slightly more thoughtful than usual. “I do like surprises.”</p>
@@ -604,10 +604,10 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-7">
-        <h2 class="text-white">Limited Time Offer: Read the Whole Book for Free!</h2>
-        <p class="text-white">I&rsquo;m giving out free ebooks of The Moonrise Warrior in order to get more honest reviews on Amazon. Click below to request an advanced reader copy (ARC) of my upcoming novel.</p>
+        <h2 class="text-white">The Moonrise Warrior</h2>
+        <p class="text-white">Read for free with Kindle Unlimited. Available to buy as an e-book, paperback, or hardcover.</p>
         
-        <a href="https://forms.gle/ViuUBjvw1Ndk8JXT7" class="btn btn-light" target="_new">Request an Advanced Reader Copy</a>
+        <a href="https://www.amazon.com/Moonrise-Warrior-Vy-Nguyen/dp/B0BSJLS65N/" class="btn btn-light" target="_new">Shop on Amazon</a>
         
       </div>
       <div class="col-lg-4 col-md-5 position-relative">
