add alex and steve legends book 1 and sample pages

--- a/products/index.html
+++ b/products/index.html
@@ -347,9 +347,9 @@
     <div class="row">
       <div class="col-lg-8 col-md-7">
         <h2 class="text-white">Subscribe to LumenScript!</h2>
-        <p class="text-white">Free Book Sample Pages, Free Catechism Resources</p>
+        <p class="text-white">Get Notified When New Books Come Out</p>
         
-        <a href="https://lumenscript.com/contact" class="btn btn-light">Get it Now!</a>
+        <a href="https://lumenscript.com/contact" class="btn btn-light">Sign Me Up!</a>
         
       </div>
       <div class="col-lg-4 col-md-5 position-relative">
