--- a/contact/index.html
+++ b/contact/index.html
@@ -117,7 +117,7 @@
       <div class="col-lg-4 col-sm-6">
         
         <h3 class="mb-4">Contact Us</h3>
-        <p>Hi there! I&rsquo;m Vy Nguyen, here to respond to your messages to Lumenscript. When you subscribe, I can send you our free content, including sample book pages and catechism resources. Type the word LUMEN in the message box so I know you&rsquo;re not a robot. I&rsquo;d love to hear from you!</p>
+        <p>Hi there! I&rsquo;m Vy Nguyen, here to respond to your messages to Lumenscript. Subscribe to be notified when new books are published. Type the word LUMEN in the message box so I know you&rsquo;re not a robot. I&rsquo;d love to hear from you!</p>
         
 
         <ul class="list-unstyled">
